<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GravityBox [MM]</string>
    <string name="battery_style_title">Battery indicator style</string>
    <string name="battery_style_stock">Stock battery indicator</string>
    <string name="battery_style_circle">Circle battery</string>
    <string name="battery_style_circle_percent">Circle battery with percentage</string>
    <string name="battery_style_none">None</string>
    <string name="vol_music_controls_title">Volume keys skip track</string>
    <string name="vol_music_controls_summary">Skip tracks on volume keys long-press while screen is off</string>
    <string name="low_battery_warning_policy_title">Low battery warning</string>
    <string name="low_battery_warning_default">Default</string>
    <string name="low_battery_warning_nonintrusive">Non-intrusive</string>
    <string name="low_battery_warning_off">Off</string>
    <string name="reboot_required">Change will be applied after reboot</string>
    <string name="poweroff_advanced_title">Advanced reboot menu</string>
    <string name="poweroff_advanced_summary">Enables advanced reboot menu with options to reboot to recovery</string>
    <string name="poweroff_recovery">Recovery</string>
    <string name="poweroff_bootloader">Bootloader</string>
    <string name="vol_key_cursor_control_title">Volume key cursor control</string>
    <string name="vol_key_cursor_control_summary">Controls cursor using volume keys in text fields</string>
    <string name="vol_key_cursor_control_off">Disabled</string>
    <string name="vol_key_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="vol_key_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="recents_clear_all_title">Clear all recent tasks</string>
    <string name="important">Important</string>
    <string name="caller_fullscreen_photo_title">Fullscreen caller photo</string>
    <string name="quick_settings_sync_on">Sync On</string>
    <string name="quick_settings_sync_off">Sync Off</string>
    <string name="quick_settings_torch_on">Torch On</string>
    <string name="quick_settings_torch_off">Torch Off</string>
    <string name="quick_settings_qr_playing">Playing&#8230;</string>
    <string name="quick_settings_qr_recording">Recording&#8230;</string>
    <string name="quick_settings_qr_recorded">Recorded</string>
    <string name="quick_settings_qr_record">Long Press to Record</string>
    <string name="quick_settings_qr_recording_notif">Touch to stop recording</string>
    <string name="quick_settings_expanded_desktop_disabled">Disabled</string>
    <string name="quick_settings_expanded_desktop_normal">Normal</string>
    <string name="quick_settings_expanded_desktop_expanded">Expanded</string>
    <string name="quick_settings_stay_awake_on">Stay Awake On</string>
    <string name="quick_settings_nfc_on">NFC On</string>
    <string name="quick_settings_nfc_off">NFC Off</string>
    <string name="quick_settings_usb_tether_off">Disconnected</string>
    <string name="quick_settings_usb_tether_connected">Tethering Off</string>
    <string name="quick_settings_usb_tether_on">Tethering</string>
    <string name="quick_settings_music_play">Play</string>
    <string name="quick_settings_music_pause">Pause</string>
    <string name="quick_settings_smart_radio_on">Smart Radio On</string>
    <string name="quick_settings_smart_radio_off">Smart Radio Off</string>
    <string name="quick_settings_lock_screen_on">Lock Screen On</string>
    <string name="quick_settings_lock_screen_off">Lock Screen Off</string>
    <string name="quick_settings_location_on">Location</string>
    <string name="quick_settings_location_off">Location Off</string>
    <string name="quick_settings_quiet_hours_off">Quiet Hours Off</string>
    <string name="quick_settings_quiet_hours_on">Quiet Hours On</string>
    <string name="quick_settings_quiet_hours_auto">Quiet Hours Auto</string>
    <string name="quick_settings_quiet_hours_wear">Wear Mode</string>
    <string name="quick_settings_title">Statusbar QuickSettings tiles</string>
    <string name="quick_settings_summary">Allows to show or hide tiles in statusbar</string>
    <string name="qs_tile_airplane_mode">Airplane Mode</string>
    <string name="qs_tile_wifi">Wi-Fi</string>
    <string name="qs_tile_bluetooth">Bluetooth</string>
    <string name="qs_tile_gps">Location</string>
    <string name="qs_tile_gps_slimkat">Location (SlimKat style)</string>
    <string name="qs_tile_gps_alt">GPS (CM style)</string>
    <string name="qs_tile_mobile_data">Mobile Data</string>
    <string name="qs_tile_network_mode">Network Mode</string>
    <string name="qs_tile_data_usage">Cellular</string>
    <string name="qs_tile_autorotation">Auto Rotation</string>
    <string name="qs_tile_sync">Synchronization</string>
    <string name="qs_tile_wifi_ap">Hotspot</string>
    <string name="qs_tile_torch_aosp">Torch (Stock)</string>
    <string name="qs_tile_torch_gb">Torch (GravityBox)</string>
    <string name="qs_tile_gravitybox">GravityBox</string>
    <string name="qs_tile_sleep">Sleep</string>
    <string name="qs_tile_quickrecord">Quick Record</string>
    <string name="qs_tile_volume">Volume</string>
    <string name="qs_tile_expanded_desktop">Expanded Desktop</string>
    <string name="qs_tile_stay_awake">Stay Awake</string>
    <string name="qs_tile_screenshot">Screenshot</string>
    <string name="qs_tile_nfc">NFC</string>
    <string name="qs_tile_usb_tethering">USB Tethering</string>
    <string name="qs_tile_music">Music</string>
    <string name="qs_tile_smart_radio">Smart Radio</string>
    <string name="qs_tile_lock_screen">Lock screen</string>
    <string name="qs_tile_inversion">Inversion</string>
    <string name="qs_tile_battery">Battery</string>
    <string name="qs_tile_dnd">Do not disturb</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="pref_cat_statusbar_title">Statusbar tweaks</string>
    <string name="pref_cat_statusbar_summary">Contains various statusbar tweaks</string>
    <string name="pref_cat_misc_title">Miscellaneous tweaks</string>
    <string name="pref_cat_misc_summary">Contains all other tweaks not falling into specific category</string>
    <string name="pref_cat_about_title">About</string>
    <string name="about_gb_summary">Coded by C3C076@XDA. Touch to visit official thread.</string>
    <string name="about_xposed_title">Xposed framework</string>
    <string name="about_xposed_summary">Coded by rovo89@XDA. Touch to visit official thread.</string>
    <string name="about_donate_title">Donate</string>
    <string name="about_donate_summary">Touch to support development by donating via PayPal</string>
    <string name="reboot_confirm">Your %s will reboot.</string>
    <string name="reboot_confirm_recovery">Your %s will reboot into recovery.</string>
    <string name="reboot_confirm_bootloader">Your %s will reboot into bootloader.</string>
    <string name="engineering_mode_title">Engineering mode</string>
    <string name="engineering_mode_summary">Launches Engineering mode application</string>
    <string name="pref_cat_lockscreen_title">Lockscreen tweaks</string>
    <string name="pref_cat_lockscreen_summary">Contains various lockscreen tweaks</string>
    <string name="pref_cat_lockscreen_background_title">Lockscreen background</string>
    <string name="pref_lockscreen_background_title">Background style</string>
    <string name="lockscreen_bg_default">Default wallpaper</string>
    <string name="lockscreen_bg_color">Color fill</string>
    <string name="lockscreen_bg_image">Custom image</string>
    <string name="lockscreen_bg_last_screen">Last screen</string>
    <string name="pref_lockscreen_bg_color_title">Set custom color</string>
    <string name="pref_lockscreen_bg_color_summary">Allows to set custom background color for lockscreen</string>
    <string name="pref_lockscreen_bg_image_title">Set custom image</string>
    <string name="pref_lockscreen_bg_image_summary">Allows to set custom background image for lockscreen</string>
    <string name="lockscreen_background_result_successful">Background changed</string>
    <string name="lockscreen_background_result_not_successful">Background not changed</string>
    <string name="pref_cat_lockscreen_other_title">Other</string>
    <string name="pref_cat_power_title">Power tweaks</string>
    <string name="pref_cat_power_summary">Contains various power related tweaks</string>
    <string name="pref_flashing_led_disable_title">Disable LED flashing</string>
    <string name="pref_flashing_led_disable_summary">Disables intrusive LED flashing when battery is low and not charging</string>
    <string name="pref_cat_display_title">Display tweaks</string>
    <string name="pref_cat_display_summary">Contains various display tweaks</string>
    <string name="pref_brightness_min_title">Minimum brightness level</string>
    <string name="pref_brightness_min_summary">Allows to set minimum brightness level. Applies to manual brightness setting. (requires reboot)</string>
    <string name="pref_ab_title">Autobrightness levels</string>
    <string name="pref_ab_summary">Allows to set ambient light levels and corresponding LCD backlight values</string>
    <string name="level">Level</string>
    <string name="pref_ab_lux_max_label">Lux max</string>
    <string name="pref_ab_brighness_label">Brightness (%d &#8211; 255)</string>
    <string name="pref_ab_number_error_general">Specified number is not valid</string>
    <string name="pref_ab_brightness_too_low">It is not recommended to set brightness below %d</string>
    <string name="pref_ab_brightness_too_high">Brightness cannot be greater than 255</string>
    <string name="pref_ab_number_error_negative">Values cannot be lower or equal to zero</string>
    <string name="pref_ab_number_not_ascending">Values on lower levels cannot be greater than values on higher levels</string>
    <string name="pref_ab_number_not_descending">Values on higher levels cannot be smaller than values on lower levels</string>
    <string name="pref_ab_values_set">Values for %s set</string>
    <string name="pref_ab_config_saved">New autobrightness configuration saved</string>
    <string name="pref_ab_config_cancelled">Autobrightness configuration was NOT saved</string>
    <string name="pref_ab_button_set">Set</string>
    <string name="pref_lockscreen_rotation_title">Enable lockscreen rotation</string>
    <string name="pref_lockscreen_rotation_summary">Requires reboot</string>
    <string name="pref_lockscreen_menu_key_title">Enable menu key</string>
    <string name="pref_lockscreen_menu_key_summary">Allows hardware menu key to unlock device (requires reboot)</string>
    <string name="pref_statusbar_center_clock_title">Center clock</string>
    <string name="pref_cat_media_title">Media tweaks</string>
    <string name="pref_cat_media_summary">Contains various tweaks for media and audio system</string>
    <string name="pref_music_volume_steps_title">More music volume steps</string>
    <string name="pref_music_volume_steps_summary">Adds more volume steps for music stream (requires reboot)</string>
    <string name="pref_safe_media_volume_title">Safe headset media volume</string>
    <string name="pref_safe_media_volume_summary">Activates or deactivates safe headset media volume feature (requires reboot)</string>
    <string name="pref_cat_hwkey_actions_title">Navigation keys actions</string>
    <string name="pref_lc_led_color_title">LED color</string>
    <string name="pref_lc_led_time_on_title">LED On duration</string>
    <string name="pref_lc_led_time_off_title">LED Off duration</string>
    <string name="pref_lc_ongoing_title">Ongoing</string>
    <string name="pref_lc_ongoing_summary">Applies also to ongoing notifications when enabled</string>
</resources>