<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2014 Peter Gregus for GravityBox Project (C3C076@xda)
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <net.margaritov.preference.colorpicker.ColorPickerPreference 
        android:key="pref_lc_led_color"
        android:title="@string/pref_lc_led_color_title"
        android:defaultValue="@integer/COLOR_WHITE"
        alphaSlider="true"
        android:persistent="false" />

    <com.ceco.kitkat.gravitybox.preference.SeekBarPreference
        android:key="pref_lc_led_time_on"
        android:title="@string/pref_lc_led_time_on_title"
        minimum="300"
        maximum="3000"
        interval="100"
        monitorBoxEnabled="true"
        monitorBoxUnit="ms"
        android:defaultValue="1000"
        android:persistent="false" />

    <com.ceco.kitkat.gravitybox.preference.SeekBarPreference
        android:key="pref_lc_led_time_off"
        android:title="@string/pref_lc_led_time_off_title"
        minimum="500"
        maximum="30000"
        interval="100"
        monitorBoxEnabled="true"
        monitorBoxUnit="ms"
        android:defaultValue="5000"
        android:persistent="false" />

    <CheckBoxPreference
        android:key="pref_lc_ongoing"
        android:title="@string/pref_lc_ongoing_title"
        android:summary="@string/pref_lc_ongoing_summary"
        android:defaultValue="false"
        android:persistent="false" />

</PreferenceScreen>